// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniformColor overview 1`] = `
<DocumentFragment>
  <table
    class="css-1ea51ic-TableRowContainer"
  >
    <tbody>
      <tr
        class="css-3krpi5-BaseUniformColor"
      >
        <td>
          <div
            class="css-dez9lm-BaseUniformColor"
          >
            <div
              class="css-1owynij-BaseUniformColor"
              style="display: inline-block;"
            />
          </div>
        </td>
        <td>
          <code
            class="css-pvo4yj-BaseUniformColor"
          >
            Weather
          </code>
        </td>
        <td>
          <div>
            153,  0,  153
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`UniformColor palette 1`] = `
<DocumentFragment>
  <table
    class="css-l3npis-UniformColorPalette"
  >
    <colgroup>
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
    </colgroup>
    <thead>
      <tr>
        <th
          class="css-1b9sdrw"
        >
          Color
        </th>
        <th
          class="css-dre8ac"
        >
          Name
        </th>
        <th
          class="css-dre8ac"
        >
          RGBA
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="css-3krpi5-BaseUniformColor"
      >
        <td>
          <div
            class="css-dez9lm-BaseUniformColor"
          >
            <div
              class="css-13itijy-BaseUniformColor"
              style="display: inline-block;"
            />
          </div>
        </td>
        <td>
          <code
            class="css-pvo4yj-BaseUniformColor"
          >
            Primary
          </code>
        </td>
        <td>
          <div>
            16,  124,  178
          </div>
        </td>
      </tr>
      <tr
        class="css-3krpi5-BaseUniformColor"
      >
        <td>
          <div
            class="css-dez9lm-BaseUniformColor"
          >
            <div
              class="css-159pajb-BaseUniformColor"
              style="display: inline-block;"
            />
          </div>
        </td>
        <td>
          <code
            class="css-pvo4yj-BaseUniformColor"
          >
            PrimaryLight
          </code>
        </td>
        <td>
          <div>
            183,  216,  232
          </div>
        </td>
      </tr>
      <tr
        class="css-3krpi5-BaseUniformColor"
      >
        <td>
          <div
            class="css-dez9lm-BaseUniformColor"
          >
            <div
              class="css-1tn2cy2-BaseUniformColor"
              style="display: inline-block;"
            />
          </div>
        </td>
        <td>
          <code
            class="css-pvo4yj-BaseUniformColor"
          >
            Alert
          </code>
        </td>
        <td>
          <div>
            216,  64,  15
          </div>
        </td>
      </tr>
      <tr
        class="css-3krpi5-BaseUniformColor"
      >
        <td>
          <div
            class="css-dez9lm-BaseUniformColor"
          >
            <div
              class="css-1nyl3u7-BaseUniformColor"
              style="display: inline-block;"
            />
          </div>
        </td>
        <td>
          <code
            class="css-pvo4yj-BaseUniformColor"
          >
            AlertLight
          </code>
        </td>
        <td>
          <div>
            243,  198,  183
          </div>
        </td>
      </tr>
      <tr
        class="css-3krpi5-BaseUniformColor"
      >
        <td>
          <div
            class="css-dez9lm-BaseUniformColor"
          >
            <div
              class="css-1owynij-BaseUniformColor"
              style="display: inline-block;"
            />
          </div>
        </td>
        <td>
          <code
            class="css-pvo4yj-BaseUniformColor"
          >
            Weather
          </code>
        </td>
        <td>
          <div>
            153,  0,  153
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
